scripts/nullaway/annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8.txt
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/sampleApp/BasicOCPApp.java:89: error: [NullAway] assigning @Nullable expression to @NonNull field
    private static OCPSystemManager sysManager = null;
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/sampleApp/BasicOCPApp.java:179: error: [NullAway] switch expression message.getMessageType() is @Nullable
        switch(message.getMessageType()) {
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1261: error: [NullAway] initializer method does not guarantee @NonNull field buffer (line 1247) is initialized along all control-flow paths (remember to check for exceptions or early returns).
        public RxThread() {
               ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1275: error: [NullAway] dereferenced expression watchdog is @Nullable
            watchdog.start();
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1293: error: [NullAway] dereferenced expression socketSelector is @Nullable
                        socketSelector.select(1 * MILLISECONDS);
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1458: error: [NullAway] dereferenced expression channel is @Nullable
                if (channel.finishConnect()) {
                           ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1488: error: [NullAway] dereferenced expression socketSelector is @Nullable
                socketSelector.close();
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1490: error: [NullAway] dereferenced expression channel is @Nullable
                channel.register(socketSelector, SelectionKey.OP_READ);
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1622: error: [NullAway] dereferenced expression channel is @Nullable
                bytesRead = channel.read(buffer);
                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1668: error: [NullAway] dereferenced expression channel is @Nullable
                bytesRead = channel.read(buffer);
                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1791: error: [NullAway] dereferenced expression channel is @Nullable
            if (channel.read(singleByte) == 0) {
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1860: error: [NullAway] dereferenced expression watchdog is @Nullable
            watchdog.start();
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1869: error: [NullAway] dereferenced expression channel is @Nullable
                channel.register(socketSelector, SelectionKey.OP_WRITE);
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1896: error: [NullAway] dereferenced expression socketSelector is @Nullable
                    socketSelector.close();
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1930: error: [NullAway] switch expression currentState is @Nullable
            switch (currentState) {
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1935: error: [NullAway] dereferenced expression channel is @Nullable
                    channel.write(txBuffer);
                           ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1941: error: [NullAway] dereferenced expression rxThread is @Nullable
                    rxThread.resetNeeded = true;
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPLinkManager.java:1946: error: [NullAway] dereferenced expression txBuffer is @Nullable
                if (txBuffer.hasRemaining()) {
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPSystemManager.java:1215: error: [NullAway] dereferenced expression watchdog is @Nullable
            watchdog.start();
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/LegacyOCPMessage.java:415: error: [NullAway] dereferenced expression getOCPType(commandCode) is @Nullable
        return getOCPType(commandCode).getBaseMessageType();
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/messages/InitialDP.java:258: error: [NullAway] dereferenced expression other.redir is @Nullable
            redir = Arrays.copyOf(other.redir, other.redir.length);
                                                          ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/OCPTelno.java:62: error: [NullAway] dereferenced expression telno is @Nullable
        this.mTelno = telno.clone();
                           ^
    (see http://t.uber.com/nullaway )
../annotator/url1d5e9d990f_Telsis_jOCP_tgz-pJ8-com_telsis_jocp_sampleApp_BasicOCPAppJ8/src/com/telsis/jocp/messages/TelsisHandler.java:161: error: [NullAway] initializer method does not guarantee @NonNull field handlerNumber (line 86) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    protected TelsisHandler(final short commandCode) {
              ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
23 errors
